Add keyboard controls
Why:

* We need to make the development more fast and more fun, with this PR a developer will be able to run the game in `localhost` without having to connect mobile phones.

This change addresses the need by:

* Creating a new wrapper that returns the input controller based on the current `url`;
* Creating a `KeyboardController` that mocks and behaves like the airconsole `api`;

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,9 @@ parserOptions:
   ecmaVersion: 6                      # Validate ES2015 features
   sourceType: module                  # Allow ES2015 modules
 
+ecmaFeatures:
+  modules: true
+
 globals:
   PIXI: false
   Phaser: false
