--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^2.0.0",
     "gulp-filter": "^3.0.1",
+    "gulp-jasmine": "^2.4.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-processhtml": "^1.1.0",
@@ -26,6 +27,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
+    "jasmine": "^2.4.1",
     "object-assign": "^4.0.1",
     "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
