--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "lodash": "^4.7.0",
     "phaser": "^2.4.4",
-    "babel-polyfill": "^6.3.14"
+    "babel-polyfill": "^6.3.14",
+    "reflux": "^0.4.1"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
