--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "phaser": "^2.4.4"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "babel-plugin-transform-runtime": "^6.4.3",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
@@ -14,6 +15,10 @@
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "del": "^2.2.0",
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-react": "^6.2.0",
     "gulp": "^3.9.0",
     "gulp-cached": "^1.1.0",
     "gulp-concat": "^2.6.0",
