--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.7.0",
-    "phaser": "^2.4.4"
+    "phaser": "^2.4.4",
+    "babel-polyfill": "^6.3.14"
   },
   "devDependencies": {
     "babel-eslint": "^6.1.2",
     "babel-plugin-transform-runtime": "^6.4.3",
-    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
     "babel-runtime": "^6.3.19",
