--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "babel-polyfill": "^6.3.14"
   },
   "devDependencies": {
+    "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
+    "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-runtime": "^6.4.3",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
